--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>Automotive</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <i class="fas fa-car">Automotive</i>
+        </div>
+
+    </nav>
 
 
 <script src="script.js"></script>    
